// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check supported path a.{b.c}.{d.e} 1`] = `
[
  "a",
  "{b",
  "c}",
  "{d",
  "e}",
]
`;

exports[`check supported path a\\.b.c.d.e 1`] = `
[
  "a.b",
  "c",
  "d",
  "e",
]
`;

exports[`check supported path allow keys to be whitespace 1`] = `
[
  "a",
  " ",
  "a",
]
`;

exports[`check supported path array 1`] = `
[
  "b",
  "c",
  "d",
]
`;

exports[`check supported path b.c.d 1`] = `
[
  "b",
  "c",
  "d",
]
`;

exports[`check supported path e\\.f\\.g 1`] = `
[
  "e.f.g",
]
`;

exports[`check supported path symbol 1`] = `
[
  Symbol(foo),
]
`;
